<!--
  ~ GNU GENERAL PUBLIC LICENSE
  ~                        Version 3, 29 June 2007
  ~
  ~     Copyright (c) 2015 Joaquim Ley <me@joaquimley.com>
  ~
  ~     This program is free software; you can redistribute it and/or
  ~     modify it under the terms of the GNU General Public License
  ~     as published by the Free Software Foundation; either version 2
  ~     of the License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program; if not, write to the Free Software
  ~     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<resources>

    <!-- Common/System -->
    <string name="app_name">By Invitation Only</string>
    <string name="app_acronym">BIO</string>
    <string name="file_conference_data">ConferenceData.csv</string>
    <string name="file_sessions_data">SessionsData.csv</string>
    <string name="csv_split">\\|</string>
    <string name="action_settings">Settings</string>
    <string name="user_visible">You are VISIBLE to other participants</string>
    <string name="user_invisible">You are INVISIBLE to other participants</string>
    <string name="text_profile_updated">Profile updated</string>
    <!-- SharedPreferences Keys -->
    <string name="shared_pref_user_details_email">user_details_email</string>
    <string name="shared_pref_user_details_description">user_details_description</string>
    <string name="shared_pref_user_details_name">user_details_name</string>
    <string name="shared_pref_user_details_photo_base64">user_details_photo_base64</string>
    <string name="shared_pref_user_details_photo_uri">user_details_photo_uri</string>
    <string name="shared_pref_user_details_availability">user_details_availability</string>
    <string name="shared_pref_user_details_id">user_details_id</string>
    <!-- Errors -->
    <string name="error_no_internet">No network connection</string>
    <string name="error_no_dialer">Device has no telephony capabilities</string>
    <string name="error_user_null">Current user is null</string>
    <string name="error_user_edit_available">You must be invisible to edit your information</string>
    <string name="error_user_must_check_in">You must be checked-in</string>
    <string name="error_create_user_profile_first">Please create your profile first</string>
    <string name="error_contacting_server">Error contacting server </string>
    <string name="error_no_user_details">Please create your user profile first</string>
    <string name="error_fill_required_fields">Please fill all required (*) fields</string>
    <!-- Firebase -->
    <string name="firebase_url">https://b-i-o.firebaseio.com/</string>
    <string name="firebase_child_users">users</string>
    <string name="firebase_child_sessions">sessions</string>
    <!-- Navigation Drawer -->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="text_home">Home</string>
    <string name="text_sessions">Sessions</string>
    <string name="text_bookmark">Bookmarks</string>
    <!-- Main Activity -->
    <string name="text_welcome_to">Welcome to</string>
    <string name="text_up_coming_sessions">Upcoming sessions</string>
    <!-- Participant List -->
    <string name="title_activity_participants_list">@string/text_participants_list</string>
    <string name="text_participants_list">Participants</string>
    <!-- Edit User Details -->
    <string name="title_activity_edit_user_details">Edit your details</string>
    <string name="text_name">Name* :</string>
    <string name="email">Email* :</string>
    <string name="description">Description* :</string>
    <string name="photo_url">Photo Url:</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <!-- Bookmarked List Activity -->
    <string name="title_activity_bookmarked_list">Bookmarked List</string>
    <string name="title_create_your_profile">Create your profile</string>
    <string name="error_user_data">There was a error with your user data</string>
    <string name="text_confirm_contact_user">Are you sure you want to contact the selected user?</string>
    <string name="text_refresh_interval">Refresh Interval</string>
    <string name="action_check_in">Check In</string>
    <string name="refresh_interval_tv_label">Choose the refresh interval:</string>
    <string name="text_status_updated">Status updated</string>
    <string name="error_must_create_profile_first">You must create your profile first, do you wish to create now?</string>
    <string name="error_confirm_cancel">Are you sure you wish to cancel? All changes will be lost</string>
    <string name="please_wait">Please wait...</string>

</resources>
